@@ -4,7 +4,11 @@ import forbee.service.AzureStorageService;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.core.io.ByteArrayResource;
+import org.springframework.core.io.Resource;
+import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
+import org.springframework.http.MediaType;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -13,7 +17,7 @@ import org.springframework.web.bind.annotation.RestController;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/files")
@@ -37,8 +41,12 @@ public class FileUploadController {
             logger.info("AzureStorageService 호출 시작...");
             String fileUrl = azureStorageService.uploadFile(file);
             logger.info("AzureStorageService 호출 완료. 반환된 URL: {}", fileUrl);
-            
-            return ResponseEntity.ok(Collections.singletonMap("url", fileUrl));
+
+            // 파일명과 URL을 함께 반환
+            return ResponseEntity.ok(Map.of(
+                "url", fileUrl,
+                "filename", file.getOriginalFilename()
+            ));
 
         } catch (IOException e) {
             logger.error("파일 업로드 중 IOException 발생", e);
